# mayim

./: .gitignore  Dockerfile  README.md  app.py  example.env  logosdb.db  main.py  pyproject.toml  requirements.txt
SecretsOfHeaven/: secrets_of_heaven_table_of_contents.csv
app/: bible.py  database.py  server.py  sqlite_migration.py
app/object_models/: computed_models.py  inferred_models.py  models.py  structured_models.py
backend/: __init__.py  graph.json  main.py  main2.py  pyproject.toml  run.py
backend/api/: chat.py
backend/chains/: base_chat.py
backend/database/: bible.py  queries.py  sqlalchemy_models.py
backend/extraction/: computed_models.py  referencetest.py
backend/graphs/: base_graph.py  chapter_worksheet.py
backend/graphs/builder/: FileTransmit.py  ServerTee.py  WorkFlow.py  server.py
backend/graphs/builder/workspace/: flow.json  graph.json
backend/schemas/: bible.py  commentary.py  fetchtest.py
backend/templates/: index.html
backend/tools/: scripture.py  wondering.py
backend/utilities/: cust_logger.py  dbconnection.py
backend/websocket/: __init__.py  connection_manager.py  graph.py  query_data.py  start_chat.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: AppLayout.jsx  BibleBrowser.jsx  BookList.jsx  BookViewer.jsx  Books.jsx  ChatBox.jsx  ReferenceList.jsx  TranslationList.jsx  Translations.jsx  Verse.jsx  Verses.jsx
static/css/: styles.css
templates/: base.html  books.html  chat.html  translations.html  verses.html  websocket.html
(+26 files in other folders)
